@@ -123,15 +123,15 @@ if [ $? -ne 0 ]; then
 fi
 
 # execute full test
-@SCOREP_COMPILER_PGI_FALSE@ SCOREP_EXPERIMENT_DIRECTORY=${result_dir_base}full \
-@SCOREP_COMPILER_PGI_FALSE@     SCOREP_PROFILING_ENABLE_CORE_FILES=true \
-@SCOREP_COMPILER_PGI_FALSE@     SCOREP_ENABLE_PROFILING=true \
-@SCOREP_COMPILER_PGI_FALSE@     SCOREP_ENABLE_TRACING=false \
-@SCOREP_COMPILER_PGI_FALSE@     ./task_loop_full $LOOP_NUM
+SCOREP_EXPERIMENT_DIRECTORY=${result_dir_base}full \
+    SCOREP_PROFILING_ENABLE_CORE_FILES=true \
+    SCOREP_ENABLE_PROFILING=true \
+    SCOREP_ENABLE_TRACING=false \
+    ./task_loop_full $LOOP_NUM
 
-@SCOREP_COMPILER_PGI_FALSE@ if [ $? -ne 0 ]; then
-@SCOREP_COMPILER_PGI_FALSE@     cat scorep-measurement-tmp/*.core
-@SCOREP_COMPILER_PGI_FALSE@     exit 1
-@SCOREP_COMPILER_PGI_FALSE@ fi
+if [ $? -ne 0 ]; then
+    cat scorep-measurement-tmp/*.core
+    exit 1
+fi
 
 exit 0
